<resources>
    <string name="app_name">TrainDemoHK</string>
    <string name="title_tab_train">Train</string>
    <string name="title_tab_practice">Practice</string>
    <string name="title_activity_custom_action_bar">CustomActionBarActivity</string>

    <string name="save_data_preference">Save to Preference</string>
    <string name="save_data_file">Save to File</string>
    <string name="save_data_db">Save to Database</string>

    <string name="manage_audio_in_volume">Increase the volume</string>
    <string name="manage_audio_de_volume">Decrease the volume</string>
    <string name="camera_take_photo">Take photo</string>
    <string name="camera_take_video">Take video</string>

    <string name="lorem_ipsum">nothing</string>



    <string name="anim_cross_fade">Cross Fade Animation</string>
    <string name="anim_screen_slide">Screen Slide Animation</string>
    <string name="anim_card_flip">Card Flip Animation</string>
    <string name="anim_view_zoom">View Zoom Animation</string>
    <string name="anim_layout_change">Layout Change Animation</string>
    <string name="title_activity_animation">Animation</string>
    <string name="title_activity_three_animation">Three Main Animation</string>
    <string name="menu_frame_anim">Frame Animation</string>
    <string name="menu_tweened_anim">Tweened Animation</string>
    <string name="menu_property_anim">Property Animation</string>

    <!--Property Animation-->
    <string name="property_anim_alpha">alpha</string>
    <string name="property_anim_move">move</string>
    <string name="property_anim_rotation">rotation</string>
    <string name="property_anim_scale">scale</string>
    <string name="property_anim_set">set</string>
    <string name="property_anim_xml_set">XML</string>

    <string name="property_value_anim_high">ValueAnimator High</string>
    <string name="property_obj_anim_high">ObjectAnimator High</string>

    <!--contacts-->

    <string name="contact_editor_input_name_hint">please write your name</string>
    <string name="contact_editor_input_phone_number_hint">please write your phone number</string>
    <string name="contact_editor_input_seat_number_hint">please write your seat number</string>
    <string name="contact_editor_input_email_hint">please write your email</string>
</resources>
