<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cross_fade"
        android:title="@string/anim_cross_fade"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_screen_slide"
        android:title="@string/anim_screen_slide"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_card_flip"
        android:title="@string/anim_card_flip"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_zoom"
        android:title="@string/anim_view_zoom"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_layout_change"
        android:title="@string/anim_layout_change"
        app:showAsAction="never" />

</menu>