<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_editor_raw_height"
        android:hint="@string/contact_editor_input_name_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_editor_raw_height"
        android:hint="@string/contact_editor_input_phone_number_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_editor_raw_height"
        android:hint="@string/contact_editor_input_seat_number_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_editor_raw_height"
        android:hint="@string/contact_editor_input_email_hint" />

</LinearLayout>