<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.train._1started.SaveDataActivity">

    <Button
        android:id="@+id/btn_save_preference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/save_data_preference"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_save_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data_file"

        app:layout_constraintLeft_toRightOf="@+id/btn_save_preference"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btn_save_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data_db"

        app:layout_constraintLeft_toRightOf="@+id/btn_save_file"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_file"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />
</android.support.constraint.ConstraintLayout>
